[package]
name = "code_location"
version = "1.0.0-dev"
authors = ["Jonas Jebing <noreply.jonas.8049@protonmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
A library to automatically acquire a code location in a rust source code file.
"""
edition = "2018"
repository = "https://github.com/JonasJebing/rust_code_location"
keywords = ["code", "source", "location", "line", "number"]
categories = ["data-structures", "no-std"]
