[package]
name = "code_location"
version = "1.1.1"
authors = ["Jonas Jebing <noreply.jonas.8049@protonmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """
UNMAINTAINED! Use std::panic::Location instead!
"""
edition = "2018"
repository = "https://github.com/JonasJebing/rust_code_location"
documentation = "https://docs.rs/code_location/"
keywords = ["code", "source", "location", "line", "number"]
categories = ["data-structures", "no-std"]

[dependencies]
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
